# ConvocaRadar-IA

./: .env.example  .env.production.example  .gitignore  CHANGELOG.md  CNAME  DEPLOYMENT.md  Dockerfile  README.md  TASKS.md  VERSIONING.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  requirements.txt  vercel.json
.atl/: .skill-registry.cache.json  skill-registry.md
apps/api/: .coverage  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh
apps/api/app/: __init__.py  main.py  models.py  schemas.py  services.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: admin.py  ai.py  alerts.py  auth.py  dashboard.py  internal.py  opportunities.py  ops.py  organizations.py  reports.py  router.py  sources.py  tasks.py
apps/api/app/connectors/: anii_uruguay.py  apc_colombia.py  api.py  bdn_convocatorias.py  common.py  configurable_html.py  cordis_h2020.py  eic_accelerator.py  eu_funding_tenders.py  factory.py  findeter.py  generic_html.py  giz_funding.py  global_innovation_fund.py  grants_gov.py  grants_gov_rss.py  heading_list_html.py  health_check.py  horizon_sedia.py  hybrid.py  icetex.py  idrc_funding.py  innovamos.py  innpulsa.py  manual.py  minciencias.py  mincit.py  mineducacion.py  nsf.py  pdf.py  procolombia_convocatorias.py  registry.py  rss.py  simpler_grants.py  ukri.py  undef.py  unesco.py  unwomen_innovate.py  usaid_grants.py  wellcome.py  (+2 more)
apps/api/app/core/: ai.py  config.py  email.py  http_client.py  rate_limit.py  security.py  storage.py  task_queue.py
apps/api/app/db/: backfill_close_dates.py  bootstrap.py  migrate.py  seed.py  seed_admin.py  session.py
apps/api/app/scraper/: __init__.py  dispatcher.py  dom_monitor.py  domain_budget.py  errors.py  probe.py  recovery.py  runner.py
apps/api/app/services/: __init__.py  _legacy.py  dedup.py  embeddings.py  export.py  scoring.py  search.py  validation.py
apps/api/convocaradar_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_role_enum.py  0003_password_changed_at.py  0004_dom_monitoring.py  0005_health_score_fields.py  0006_connector_config.py  0007_disable_broken_sources.py
apps/api/tests/: conftest.py  connector_fixtures.py  test_admin_probe.py  test_ai_http_client.py  test_api.py  test_auth.py  test_bundle_analyzer.py  test_change_password.py  test_compose_and_env.py  test_config_production_sqlite_warning.py  test_configurable_html.py  test_connector_parsers.py  test_connectors.py  test_dashboard_health.py  test_dashboard_pipeline.py  test_dashboard_summary_alias.py  test_dashboard_triage.py  test_deploy_workflow.py  test_dom_monitor.py  test_domain_budget.py  test_embedding_async.py  test_exception_handlers.py  test_findeter.py  test_fondecyt.py  test_fondo_emprender_interamerican.py  test_forgot_password.py  test_funding_parser.py  test_genai_admin.py  test_healthcheck.py  test_http_client.py  test_migration_reversibility.py  test_migrations.py  test_opportunity_serialization.py  test_ops.py  test_password_changed_at_claim.py  test_rate_limit.py  test_register_perf.py  test_registry.py  test_reset_password.py  test_schemas_password_recovery.py  (+18 more)
apps/worker/: Dockerfile  pyproject.toml  requirements.txt
apps/worker/convocaradar_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/worker/tests/: test_bootstrap.py  test_connectors.py
apps/worker/worker/: __init__.py  app.py  config.py  entrypoint.py  main.py  runner.py
apps/worker/worker/connectors/: anii_uruguay.py  apc_colombia.py  api.py  base.py  bdn_convocatorias.py  common.py  cordis_h2020.py  eic_accelerator.py  eu_funding_tenders.py  factory.py  generic_html.py  giz_funding.py  global_innovation_fund.py  grants_gov.py  grants_gov_rss.py  heading_list_html.py  horizon_sedia.py  hybrid.py  icetex.py  idrc_funding.py  innovamos.py  innpulsa.py  manual.py  minciencias.py  mincit.py  mineducacion.py  nsf.py  pdf.py  procolombia_convocatorias.py  rss.py  simpler_grants.py  ukri.py  undef.py  unesco.py  unwomen_innovate.py  usaid_grants.py  wellcome.py  wordpress_grants.py
apps/worker/worker/tasks/: bootstrap.py  generate_report.py  health.py  process_opportunity.py  scheduler.py  scrape_source.py  send_alerts.py
(+229 files in other folders)
