[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convocaradar-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "structlog>=24.4.0",
  "httpx>=0.27.0",
  "tenacity>=8.5.0",
  "jinja2>=3.1.4",
  "openpyxl>=3.1.5",
  "reportlab>=4.2.2",
  "pgvector>=0.3.6",
  "celery>=5.4.0",
  "redis>=5.0.8,<6",
  "playwright>=1.45.0",
  "selectolax>=0.3.21",
  "pypdf>=5.0.0",
  "python-dateutil>=2.9.0",
  "boto3>=1.35.0",
  "email-validator>=2.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "factory-boy>=3.3.0",
  "coverage>=7.6.1",
  "ruff>=0.6.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]
