[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convocaradar-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4.0",
  "redis>=5.0.8,<6",
  "httpx>=0.27.0",
  "playwright>=1.45.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "selectolax>=0.3.21",
  "pypdf>=5.0.0",
  "python-dateutil>=2.9.0",
  "tenacity>=8.5.0",
  "jinja2>=3.1.0",
  # GAP-1 (dashboard-redesign): worker.tasks.bootstrap imports structlog and
  # re-uses app.* modules (seed_default_sources, SessionLocal, Organization).
  # These come from the API; the worker Dockerfile already installs the API
  # package in production. Adding structlog here keeps CI hermetic when
  # only the worker package is installed for tests.
  "structlog>=24.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../api"]
