[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convocaradar-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "playwright>=1.45.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "selectolax>=0.3.21",
  "pypdf>=5.0.0",
  "python-dateutil>=2.9.0",
  "tenacity>=8.5.0",
  "jinja2>=3.1.0",
  "structlog>=24.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8"
]

[tool.setuptools.packages.find]
# The worker package lives under apps/worker/worker/. Setuptools automatic
# discovery picks up both apps/ and worker/ as top-level packages in the
# Docker build context (COPY apps/api ./apps/api creates apps/), causing:
#   "Multiple top-level packages discovered in a flat-layout: ['apps', 'worker']"
# Pin discovery to the worker directory to suppress the setuptools ≥68 check.
where = ["worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../api"]
