[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convocaradar-worker"
version = "0.1.0"
description = "ConvocaRadar Arq worker — processes scrape jobs dispatched by the API"
requires-python = ">=3.12"
dependencies = [
  "convocaradar-api",
  "arq>=0.26.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.1",
  "sqlalchemy>=2.0.32",
  "structlog>=24.4.0",
  "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["worker*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
